fix: Spacing issues because of the global default line hight fix for editor page.

--- a/frontend/src/renderer/assets/main.css
+++ b/frontend/src/renderer/assets/main.css
@@ -309,13 +309,13 @@ body::-webkit-scrollbar {
   background-color: var(--color-background);
   text-align: left;
   border: none;
-  border-bottom: 2px solid var(--color-darkgray);
-  padding: 0.8rem;
+  padding: 0.875rem;
   cursor: pointer;
+  margin-bottom: 0.125rem;
 }
 
 .note-bar-preview > h2 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.625rem;
 }
 
 .note-bar-preview > h2,
@@ -337,7 +337,6 @@ body::-webkit-scrollbar {
 }
 
 .note-bar-preview > p {
-  margin-top: 0.2rem;
   font-size: small;
 }
 
